<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amrsaidam.tigarty.Fragments.SalePointFragment">

    <!-- TODO: Update blank fragment layout -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/tigarty_logo"
            />

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_below="@id/imageView"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/productName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_alignLeft="@+id/imageView"
                        android:layout_alignStart="@+id/imageView"
                        android:ems="10"
                        android:hint="@string/productName"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        />
                </android.support.design.widget.TextInputLayout>
                <!--<EditText-->
                    <!--android:id="@+id/productName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignLeft="@+id/imageView"-->
                    <!--android:layout_alignStart="@+id/imageView"-->


                    <!--android:ems="10"-->
                    <!--android:hint="@string/productName"-->
                    <!--android:imeOptions="actionDone"-->
                    <!--android:inputType="text" />-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_productNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/productNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/scan_format"
                    android:layout_alignStart="@+id/scan_format"
                    android:layout_below="@+id/scan_format"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/productAmount"
                    android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textContainer"
                android:orientation="vertical">


                <Button
                    android:id="@+id/scan_barcode_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/scanButton" />

                <Button
                    android:id="@+id/send_barcode_Button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/sendButton" />


                <Button
                    android:id="@+id/cancel_Button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/cancelButton"
                    android:text="@string/cancelButton" />

            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</FrameLayout>
