<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="?android:attr/windowNoTitle"
    android:background="@drawable/login_background"
    android:elevation="0dp"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="-2dp"
    tools:actionBarNavMode="@color/colorAccent"
    tools:context="com.example.amrsaidam.tigarty.Login">

    <LinearLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="0dp"
        android:orientation="vertical"
        android:padding="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:paddingTop="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/wall_p" />

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_marginTop="-118dp"
            android:src="@drawable/new_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="-20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="0dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"

            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/password"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:ems="10"
                    android:hint="@string/phoneNumber"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/singIn"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/singIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"
                android:focusable="true"
                android:textColor="@color/buttonText"
                android:text="@string/loginButton" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
