<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amrsaidam.tigarty.Fragments.MainFragment"
    android:padding="5dp">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        >


        <LinearLayout
            android:id="@+id/pie_charts_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/pie_charts_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/productOfHighestProfit"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:paddingTop="10dp"/>

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piChart"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/pie_charts_background"
                android:orientation="vertical"
                android:fadeScrollbars="true">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/productOfTheHighestSale"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:paddingTop="10dp"/>

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piChart2"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/pie_charts_background"
            android:orientation="vertical"
            android:paddingBottom="15dp"

            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/monthlyProfits"
                android:textColor="#000000" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/profits_chart"
                android:layout_width="match_parent"
                android:layout_height="276dp">

            </com.github.mikephil.charting.charts.LineChart>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
